--- a/public/css/login.css
+++ b/public/css/login.css
@@ -24,7 +24,7 @@
     margin-top: 20px;
     display: flex;
     margin-bottom: 40px;
-    border: solid 1px #4eb92d;
+    border: solid 1px var(--cl-blue);
     width: 782px;
     display: flex;
 }
@@ -76,13 +76,13 @@
 .page-content-account .right-col {
     height: 100%;
     width: calc(782px - 486px);
-    background-color: var(--cl-green);
+    background-color: var(--cl-blue);
 }
 
 .d-group__login .btn-login {
     width: 100%;
     height: 40px;
-    background-color: var(--cl-green);
+    background-color: var(--cl-blue);
     color: var(--white);
     font-weight:bold;
     text-align: center;
