--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,7 +100,7 @@
 
  }
 .title-name-result{
-    color: var(--cl-green);
+    color: var(--cl-blue);
     font-size: 14px;
     padding-bottom: 8px;
  }
@@ -113,12 +113,14 @@
      color: var(--cl-red);
      font-size: 14px;
  }
+
+ 
  a.result-count {
     border-top: 1px solid;
     width: 100%;
     display: block;
     text-align: center;
-    color: var(--cl-green);
+    color: var(--cl-blue);
     padding: 8px 0;
 }
 
@@ -131,7 +133,7 @@
 }
 
 .contact__phone a {
-    color: var(--cl-green);
+    color: var(--cl-blue);
     font-weight: 600;
 }
 .group__contact {
@@ -141,12 +143,12 @@
     display: flex;
     justify-content: space-evenly;
     padding: 10px 0;
-    border: 1px solid var(--cl-green);
+    border: 1px solid var(--cl-blue);
     border-radius: 5px;
 }
 
 .group__account-list > li > div > a i{
-    color: var(--cl-green);
+    color: var(--cl-blue);
     font-size: 20px;
 }
 .heart__icon > a ,.cart-icon > a{
@@ -157,7 +159,7 @@
     width: 15px;
     border-radius: 100%;
     color: #fff;
-    background: #369518;
+    background: var(--cl-blue);
     height: 15px;
     display: inline-block;
     text-align: center;
@@ -171,6 +173,10 @@
 }
 .user:hover > .group-login {
     z-index: 2;
+    display: block;
+}
+li.group-login__list-item > b {
+    margin: 8px;
     display: block;
 }
 .cart-icon:hover > .cart-down {
@@ -190,7 +196,7 @@
 }
 .group-login {
     position: absolute;
-    width: 120px;
+    width: 142px;
     box-shadow: 0px 0px 6px rgb(79 95 120 / 10%);
     right: -20px;
     top: 35px;
@@ -326,7 +332,7 @@ a.cart-content-inner__btn{
     margin-bottom: 12px;
 }
 .cart-content-inner__btn.btn-show {
-    background-color: var(--cl-green);
+    background-color: var(--cl-blue);
 }
 
 /* END CART */
@@ -535,7 +541,7 @@ display: flex;
 
 .populator__head > p{
     font-size: 15px;
-    color: var(--cl-green);
+    color: var(--cl-blue);
 }
 .populator__head-title {
     font-size: 22px;
@@ -546,7 +552,7 @@ display: flex;
 }
 .populator__head-all {
     display: flex;
-    background: var(--cl-green);
+    background: var(--cl-blue);
     color: #fff;
     padding: 8px 20px;
     border-radius: 15px;
@@ -586,7 +592,7 @@ h2.tilte-name-product {
    position: relative;
 }
 .populator__head-desc {
-    color: var(--cl-green);
+    color: var(--cl-blue);
 }
 .populator__product-link {
     color: #000;
@@ -652,7 +658,7 @@ h2.tilte-name-product {
     outline: none;
     border: none;
     padding: 8px 15px;
-    background: var(--cl-green);
+    background: var(--cl-blue);
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
@@ -724,7 +730,7 @@ h2.tilte-name-product {
 #product-fruits button.owl-dot.active ,
 #product-dry button.owl-dot.active,
 #product-new button.owl-dot.active{
-    background: var(--cl-green);
+    background: var(--cl-blue);
 }
 #product-fruits .owl-nav, #product-dry .owl-nav, 
 #product-sale-slider .owl-nav ,
@@ -904,7 +910,7 @@ i.far.fa-heart.icon-heart-i:hover{
 }
 
 .list-address li i{
-    color: var(--cl-green);
+    color: var(--cl-blue);
     margin-right: 8px;
 }
 
@@ -912,7 +918,7 @@ i.far.fa-heart.icon-heart-i:hover{
     padding-bottom: 12px;
 }
 input.seed-mail {
-    background: var(--cl-green);
+    background: var(--cl-blue);
     border: none;
     color: #fff;
     padding: 8px 12px;
@@ -940,7 +946,7 @@ input.seed-mail::placeholder {
     position: fixed;
     right: 100px;
     bottom: 100px;
-    background-color: var(--cl-green);
+    background-color: var(--cl-blue);
     padding: 10px 12px;
     border-radius: 5px;
     cursor: pointer;
@@ -1025,12 +1031,28 @@ input.seed-mail::placeholder {
     border-radius: 8px;
     margin-bottom: 30px;
  }
- .product-detail-main__price span {
+ .product-detail-main__price span.product-detail-main__price-new {
      color: #fff;
      font-weight: 600;
      font-size: 24px;
-     
+     padding-right: 15px;
  }
+ .product-detail-price__old {
+    text-decoration: line-through;
+    font-size: 18px;
+    padding-right: 15px;
+}
+span.product-detail-price__sale {
+    padding: 10px;
+    background: var(--cl-red);
+    border-radius: 9px;
+    color: #fff;
+    font-weight: 800;
+}
+.product-detail-left__thumbnail--sale  {
+    border: 4px solid var(--cl-red)!important;
+}
+
 .product-detail-main__desc{ 
     display: flex;
     justify-content: space-between;
@@ -1076,13 +1098,13 @@ p.product-detail-main__desc-text {
     text-align: center;
     }
 .add-cart{
-    background-color: var(--cl-green);
-    border: 1px solid var(--cl-green);
+    background-color: var(--cl-blue);
+    border: 1px solid var(--cl-blue);
  }
 
  .add-cart:hover {
      background-color: #fff;
-     color: var(--cl-green);
+     color: var(--cl-blue);
  }
 .buy-now{
     background-color: var(--cl-blue);
@@ -1101,7 +1123,7 @@ i.far.fa-heart.icon-heart-i {
 }
 .add-heart{ 
     font-size: 24px;
-    color: var(--cl-green);
+    color: var(--cl-blue);
     background-color: transparent;
 }
 .product-detail-banner img{ 
@@ -1111,13 +1133,37 @@ i.far.fa-heart.icon-heart-i {
 
 .product_getcontent{
     border: 1px solid #c1c1c1;
-    padding: 25px 15px;
+    padding: 10px 15px;
     border-radius: 5px;
  }
 .product-tab-title{
     display: flex;
     justify-content: center;
+    padding-bottom: 20px;
  }
+ .product-tab-desc__element p {
+    line-height: 22px;
+}
+
+.product-tab-desc {
+    height: 300px;
+    overflow: hidden;
+    transition: all 3s ease;
+}
+.view-button-toggle {
+    display: flex;
+    justify-content: center;
+}
+
+.view-button-toggle button.btn-view-more {
+    cursor: pointer;
+    background: var(--cl-blue);
+    color: #fff;
+    border-radius: 5px;
+    border: 1px solid #c1c1c1;
+    padding: 5px;
+}
+
  .product-tab-title span{
     background-color: var(--cl-blue);
     padding: 12px 22px;
@@ -1210,7 +1256,7 @@ i.far.fa-heart.icon-heart-i {
 
 .cart-page-footer-button a {
     padding: 10px 77px;
-    background: var(--cl-green);
+    background: var(--cl-blue);
     color: #fff;
     font-size: 20px;
     border-radius: 8px;
@@ -1272,7 +1318,7 @@ div.wrapper-count {
     position: relative;
     height: 44px;
     width: 54px;
-    background-color: #4EB92D;
+    background-color: var(--cl-blue);
     border-radius: 8px;
     text-align: center;
     font-size: 2.4em;
@@ -1310,7 +1356,7 @@ div.wrapper-count {
   
   .top {
     z-index: 3;
-    background-color: #4EB92D;
+    background-color: var(--cl-blue);
     -webkit-transform-origin: 50% 100%;
             transform-origin: 50% 100%;
     -webkit-transform: perspective(200px);
@@ -1348,7 +1394,7 @@ div.wrapper-count {
     top: 0;
     height: 50%;
     overflow: hidden;
-    background-color: #31c205;
+    background-color: var(--cl-blue);
   }
   
   .bottom-back span {
@@ -1372,7 +1418,7 @@ div.wrapper-count {
     bottom: 0;
     -webkit-transform-origin: 50% 0;
             transform-origin: 50% 0;
-    background-color: #31c205;
+    background-color: var(--cl-blue);
     -webkit-transform: perspective(200px) rotateX(180deg);
             transform: perspective(200px) rotateX(180deg);
   }
@@ -1492,7 +1538,7 @@ div.wrapper-count {
 .wrapper-pay__cod i {
     padding-right: 20px;
     font-size: 19px;
-    color: var(--cl-green);
+    color: var(--cl-blue);
 }
 
 .layout-flex h2 {
@@ -1543,7 +1589,7 @@ span.pay-order__item-price {
 }
 
 button.pay-order__button-check {
-    background: var(--cl-green);
+    background: var(--cl-blue);
     color: #fff;
     padding: 10px 30px;
     font-size: 20px;
@@ -1565,7 +1611,7 @@ button.pay-order__button-check {
 
 .count-product {
     position: absolute;
-    background-color: var(--cl-green);
+    background-color: var(--cl-blue);
     top: -5px;
     width: 20px;
     height: 20px;
@@ -1648,7 +1694,7 @@ p.sum-price {
 }
 
 a.btn-back-home {
-    background: var(--cl-green);
+    background: var(--cl-blue);
     color: #fff;
     padding: 20px 30px;
     border-radius: 8px;
@@ -1660,3 +1706,30 @@ span.pad-order__item-name {
 }
 
 /* ORDER_MY */
+.thead-default tr th {
+    border: 1px solid #dee2e6;
+    background: #f1975f;
+    color: #fff;
+    padding: 5px;
+    
+}
+.table-order th {
+    font-weight: 400;
+    text-align: center;
+}
+
+a.btn-usset-order {
+    background: var(--cl-red);
+    color: #fff;
+    padding: 6px 18px;
+    font-weight: 600;
+    border-radius: 5px;
+}
+a.btn-usset-order__disble {
+    color: #fff;
+    padding: 6px 18px;
+    font-weight: 600;
+    background: #c1c1c1;
+    cursor: no-drop;
+    pointer-events: none;
+}
