--- a/public/css/product.css
+++ b/public/css/product.css
@@ -22,7 +22,7 @@
     border-radius: 5px;
     margin: 30px;
     padding: 10px;
-    border: 1px solid var(--cl-green);
+    border: 1px solid var(--cl-blue);
     box-shadow: 5px 5px rgb(238, 235, 235);
 }
 .container-infor__item{
@@ -39,7 +39,7 @@
 }
 .btn-edit{
     
-    background-color: var(--cl-green);
+    background-color: var(--cl-blue);
     display: block;
     width: 100%;
     outline: none;
@@ -56,7 +56,7 @@
     line-height: 1.8rem;
     height: 30px;
     width: 100%;
-    background-color: green;
+    background-color: var(--cl-blue);
 }
 .container-infor__name{
     margin: 10px;
@@ -249,7 +249,7 @@ input[type="radio"]:checked {
     margin-right: 5px;
 }
 .container-pass,.container-inforp {
-    border: var(--cl-green) 1px solid;
+    border: var(--cl-blue) 1px solid;
     border-radius: 4px;
     display: none;
 }
