--- a/public/css/main.css
+++ b/public/css/main.css
@@ -980,6 +980,7 @@ input.seed-mail::placeholder {
     width: 350px;
     height: 350px;
     border-radius: 10px;
+    padding: 8px;
  }
  .product-detail-left__list-thumb {
      position: relative;
@@ -1060,7 +1061,7 @@ span.product-detail-price__sale {
 }
 p.product-detail-main__desc-text {
     margin-bottom: 10px;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 20px;
 }
 .custom-quantity{
@@ -1732,4 +1733,59 @@ a.btn-usset-order__disble {
     background: #c1c1c1;
     cursor: no-drop;
     pointer-events: none;
+}
+
+ /* ORDER_DETAIL */
+ .page_order .body_order .box-address {
+    margin-top: 30px;
+}
+.order-detail__head-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+.order-detail__head h2 {
+    font-size: 24px;
+    padding-bottom: 30px;
+}
+.box-des {
+    min-height: 110px;
+    padding: 13px 25px 10px 20px;
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+}
+.box-address {
+    margin-bottom: 30px;
+}
+.box-des p {
+    font-size: 16px;
+    line-height: 16px;
+    vertical-align: top;
+    text-align: left;
+    margin-bottom: 8px;
+}
+
+td.link {
+    display: flex;
+    align-items: center;
+}
+
+.image_order {
+    padding-right: 14px;
+}
+
+.content_right ,.bottom_mb{
+    display: flex;
+    align-items: center;
+}
+td.numeric {padding-top: 57px;text-align: center;}
+
+.quantity_mb,.title_order {
+    margin-right: 10px;
+}
+
+h2.title-head {
+    text-transform: uppercase;
+    font-size: 22px;
+    padding-bottom: 15px;
 }
