--- a/Admin/Public/css/admin.css
+++ b/Admin/Public/css/admin.css
@@ -1,3 +1,4 @@
+
 /* Header Admin */
 /* Navbar */
 
@@ -236,4 +237,8 @@
 
 .head_table_tk_ct th {
     color: rgb(152, 99, 0);
+}
+
+.btn-remove-none {
+    display: none;
 }
