--- a/public/css/main.css
+++ b/public/css/main.css
@@ -404,7 +404,7 @@ a.cart-content-inner__btn{
 .nav-item__down {
     position: absolute;
     box-shadow: 0 0 2px 2px #c1c1c1;
-    width: 200px;
+    width: 225px;
     top: 35px;
     left: -20px;
     display: none;
@@ -414,6 +414,40 @@ a.cart-content-inner__btn{
 
 .nav-item__down-item {  
     border-bottom: 1px solid #c1c1c1;
+}
+
+.nav-item__down-item a{
+    color: var(--cl-text);
+    font-size: 16px;
+    padding: 10px 20px;
+    display: block;
+}
+
+
+.nav-item__down-item {  
+    border-bottom: 1px solid #c1c1c1;
+    position: relative;
+}
+.nav-item__down-item i.fas.fa-chevron-right {
+    position: absolute;
+    right: 15px;
+}
+.nav-item__down-item:hover .nav-list__down {
+    display: block;
+}
+
+.nav-item__down-item:hover > a {
+    color: #ffeb00;
+}
+
+.nav-list__down {
+    position: absolute;
+    right: -100%;
+    top: 0;
+    background: #fff;
+    width: 224px;
+    display: none;
+    box-shadow: 0px 0px 6px rgb(79 95 120 / 10%);
 }
 
 .nav-item__down-item a{
@@ -1178,7 +1212,18 @@ i.far.fa-heart.icon-heart-i {
     line-height: 1.7;
     padding: 15px 0;
  }
+ .delivery-method {
+    padding: 30px 15px;
+    border: 1px solid #c1c1c1;
+    border-radius: 11px;
+    margin-bottom: 20px;
+}
 
+.delivery-method p {
+    padding-bottom: 12px;
+    font-size: 16px;
+    line-height: 20px;
+}
 
  /* CART  */
  .cart-header-info {
@@ -1561,6 +1606,8 @@ li.pad-order__item {
 }
 span.pay-order__item-price {
     padding-right: 6px;
+    font-size: 15px;
+    color: red;
 }
 .pay-order__head {
     padding: 0px 0 28px 0;
@@ -1727,7 +1774,12 @@ a.btn-back-home {
 }
 
 span.pad-order__item-name {
-    max-width: 192px;
+    max-width: 188px;
+    font-size: 14px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 /* ORDER_MY */
